# security-scanner

./: README.md  pyproject.toml
app/: __init__.py  cli.py  database.py  hashing.py  models.py  risk.py  scanner.py  updater.py
app/feeds/: __init__.py  base.py  cve_org.py  malwarebazaar.py  nvd.py  optional.py  threatfox.py  urlhaus.py
app/plugins/: base.py  hooks.py  manager.py
app/utils/: __init__.py
data/: example_scanner.db  scan-result.json  scanner.db
data/samples/: readme-safe.txt
tests/: test_database_lookup.py  test_hashing.py  test_risk.py
