[project]
name = "security-scanner"
version = "0.1.0"
description = "Minimal local security scanner MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
security-scanner = "app.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
